WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25602
REGRESSION: fast/overflow/overflow-focus-ring.html seems double-drawn on ToT
https://bugs.webkit.org/show_bug.cgi?id=25602
Summary
REGRESSION: fast/overflow/overflow-focus-ring.html seems double-drawn on ToT
Eric Seidel (no email)
Reported
2009-05-06 20:08:31 PDT
fast/overflow/overflow-focus-ring.html seems double-drawn on ToT I'm testing with
r43332
. I ran the pixel tests just now and fast/overflow/overflow-focus-ring.html, the ring seems double drawn.
Attachments
Do not paint a self-painting layer's outline in paintLayer()
(47.41 KB, patch)
2009-05-10 01:09 PDT
,
mitz
ddkilzer
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2009-05-06 20:20:59 PDT
Looks like the same thing that's happened to the textarea I'm typing in right now.
mitz
Comment 2
2009-05-10 01:09:18 PDT
Created
attachment 30161
[details]
Do not paint a self-painting layer's outline in paintLayer()
David Kilzer (:ddkilzer)
Comment 3
2009-05-10 06:18:02 PDT
Comment on
attachment 30161
[details]
Do not paint a self-painting layer's outline in paintLayer() r=me
mitz
Comment 4
2009-05-10 09:29:26 PDT
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/43458
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug