WebCore:

Reviewed by Dave Kilzer.

        - fix https://bugs.webkit.org/show_bug.cgi?id=25602
          REGRESSION: fast/overflow/overflow-focus-ring.html seems double-drawn
          on ToT

        Test: fast/layers/self-painting-outline.html

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::paintLayer): Paint the layer's own outline only
        if it is a self-painting layer.

LayoutTests:

        Reviewed by Dave Kilzer.

        - new test and correct results for https://bugs.webkit.org/show_bug.cgi?id=25602
          REGRESSION: fast/overflow/overflow-focus-ring.html seems double-drawn
          on ToT

        * fast/layers/self-painting-outline.html: Added.
        * platform/mac/fast/overflow/overflow-focus-ring-expected.checksum: Updated.
        * platform/mac/fast/overflow/overflow-focus-ring-expected.png: Updated.
        * platform/mac/fast/layers/self-painting-outline-expected.checksum: Added.
        * platform/mac/fast/layers/self-painting-outline-expected.png: Added.
        * platform/mac/fast/layers/self-painting-outline-expected.txt: Added.



Canonical link: https://commits.webkit.org/35462@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43458 268f45cc-cd09-0410-ab3c-d52691b4dbfc